fix: z-index

--- a/src/app/components/message-item/message-item.component.scss
+++ b/src/app/components/message-item/message-item.component.scss
@@ -44,6 +44,7 @@
 
                 .edit-message-container {
                     position: absolute;
+                    z-index: 2;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
